--- a/gallery3.html
+++ b/gallery3.html
@@ -50,19 +50,13 @@
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a href="#" class="active"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-                <li><a href="gallery.html">Nature</a></li>
-                <li><a href="gallery2.html">People</a></li>
-                <li><a href="gallery3.html">Architecture</a></li>
-                <li><a href="gallery4.html">Animals</a></li>
-                <li><a href="gallery5.html">Sports</a></li>
-                <li><a href="gallery6.html">Travel</a></li>
-              <li class="dropdown"><a href="#"><span>Sub Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
+              <li><a href="gallery.html">Nature</a></li>
+              <li><a href="gallery2.html">People</a></li>
+              <li><a href="gallery3.html">Architecture</a></li>
+              <li><a href="gallery4.html">Animals</a></li>
+              <li><a href="gallery5.html">Sports</a></li>
+              <li><a href="gallery6.html">Travel</a></li>
+              
             </ul>
           </li>
           <li><a href="services.html">Services</a></li>
@@ -89,7 +83,7 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Architecture</h2>
+            <h2>Architecture Photography</h2>
             <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
 
             <a class="cta-btn" href="contact.html">Available for hire</a>
