--- a/sample-inner-page.html
+++ b/sample-inner-page.html
@@ -52,18 +52,12 @@
           <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="gallery.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
-              <li><a href="gallery.html">Architecture</a></li>
-              <li><a href="gallery.html">Animals</a></li>
-              <li><a href="gallery.html">Sports</a></li>
-              <li><a href="gallery.html">Travel</a></li>
-              <li class="dropdown"><a href="#"><span>Sub Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
+              <li><a href="gallery2.html">People</a></li>
+              <li><a href="gallery3.html">Architecture</a></li>
+              <li><a href="gallery4.html">Animals</a></li>
+              <li><a href="gallery5.html">Sports</a></li>
+              <li><a href="gallery6.html">Travel</a></li>
+              
             </ul>
           </li>
           <li><a href="services.html">Services</a></li>
