--- a/gallery-single.html
+++ b/gallery-single.html
@@ -84,8 +84,10 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Gallery Single</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+            <h2>Client No. 1</h2>
+            <br>
+            <br>
+            <p>Kindly send me a message for your inquiries and questions</p>
 
             <a class="cta-btn" href="contact.html">Available for hire</a>
 
@@ -103,22 +105,22 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="assets/img/gallery/gallery-8.jpg" alt="">
+                <img src="assets/img/gallery/gallery-48.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/gallery/gallery-9.jpg" alt="">
+                <img src="assets/img/gallery/gallery-49.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/gallery/gallery-10.jpg" alt="">
+                <img src="assets/img/gallery/gallery-50.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/gallery/gallery-11.jpg" alt="">
+                <img src="assets/img/gallery/gallery-51.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/gallery/gallery-12.jpg" alt="">
+                <img src="assets/img/gallery/gallery-52.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/gallery/gallery-13.jpg" alt="">
+                <img src="assets/img/gallery/gallery-47.jpg" alt="">
               </div>
 
             </div>
@@ -133,33 +135,32 @@
 
           <div class="col-lg-8">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Team-Building | March 2022</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                A continuing process called team building aids in the development of a work group's sense of unity. The team members accept one another's individual characteristics and trust and support one another in addition to having similar expectations for completing work as a group.
               </p>
               <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                The purpose of team building activities is to motivate your people to work together, to develop their strengths, and to address any weaknesses. So, any team building exercise should encourage collaboration rather than competition.
               </p>
 
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  It was a great and thrilling experience because I got to travel from Laguna to Bulacan on my own for this project, also it was the best because I was able to meet the company's expectations.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <div>
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
+                  <h3>Gemanel Raina</h3>
+                  <h4>Photographer</h4>
                 </div>
               </div>
 
               <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
+                The event was held in The Greenery Resort Bulacan. I was hired to capture photos and create a video with regards to their 2-day team building.
 
               <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-              </p>
+                   </p>
 
             </div>
           </div>
@@ -168,9 +169,9 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong> <span>Nature Photography</span></li>
-                <li><strong>Client</strong> <span>ASU Company</span></li>
-                <li><strong>Project date</strong> <span>01 March, 2022</span></li>
+                <li><strong>Category</strong> <span>Sports Photography</span></li>
+                <li><strong>Client</strong> <span>TPC Company</span></li>
+                <li><strong>Project date</strong> <span>27-29 March, 2022</span></li>
                 <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
                 <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
               </ul>
