--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           </li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="edit.html">Edit Details</a></li>
         </ul>
       </nav><!-- .navbar -->
 
